--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,7 @@
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "morgan": "~1.9.1",
     "mysql2": "^3.9.1"
