--- a/backend/package.json
+++ b/backend/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.18.2",
     "morgan": "~1.9.1",
-    "mysql2": "^3.9.1"
+    "mysql2": "^3.9.1",
+    "nodemon": "^3.1.0"
   }
 }
